web: fix submenu z-index on phenocode narrow view

--- a/risteys_elixir/assets/css/tailwind.css
+++ b/risteys_elixir/assets/css/tailwind.css
@@ -375,10 +375,10 @@ header .actions a {
    font-size: 15px;
    position:absolute; /* together with #details-R-nav position makes submenu not to change alingment of elements in the heading */
    @apply bg-blue-darker;
-   z-index: 1;
+   z-index: 30;  /* appear on top of the search field in narrow view */
    @apply pl-0; /* remove left-pagging */
    padding-right: 30px; /* right-padding to make menu box as wide as "R7▸" */
- }
+}
 
 #R-subnav li a {
     margin-left: 0rem; /* to over write header .actions a {margin-left: 1.5rem; } */
